--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -13,3 +13,59 @@
 .has-header{
   top:88px!important;
 }
+.search-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #2d5be3;
+  font-weight: bold;
+  margin: 8px 0 0 10px;
+}
+.search-category {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 12px;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+.info {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin-left: 10px;
+}
+.info .venueScore {
+    float: none;
+    line-height: 140%;
+    padding: 0;
+    position: relative;
+    top: -1px;
+    width: 25px;
+}
+.venueScore.positive {
+    background: #00b551;
+}
+.venueScore {
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    background: #ffc800;
+    color: #fff;
+    cursor: default;
+    display: inline-block;
+    float: left;
+    font-size: 12px;
+    font-weight: bold;
+    margin: 0 5px 0 0;
+    padding: 4px;
+    text-align: center;
+    text-shadow: rgba(0,0,0,0.1) 0 -1px 0;
+    width: 30px;
+}
+.tips{
+  line-height: 115%;
+  color: #959b9e;
+  margin: 10px 10px 0 10px;
+}
