--- a/app/www/templates/search.html
+++ b/app/www/templates/search.html
@@ -14,9 +14,17 @@
       ng-repeat="venue in venues" 
       type="item-text-wrap" 
       href="#/search/search/{{venue.id}}">
-
         <img ng-src="{{venue.picture_url}}">
-        <h2 class="name">{{venue.title}}</h2>
+        <div class="search-title">{{venue.title}}</div>
+  
+          <div class="info">
+            <span class="venueScore {{getColor()}}">
+              <span>{{venue.rating}}</span>
+            </span>
+          </div>
+        <div class="search-category">{{venue.category}}</div>
+       <!--  <div class="tips">{{venue.tips}}</div> -->
+
       </ion-item>
     </ion-list>
   </ion-content>
