--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -1,3 +1,6 @@
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
 .backdrop,
 .loading-container {
     top: 180px;
